--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <h1 style="color: rgb(255, 162, 178);">Daftar Akun Cari Jodoh</h1>
+    <h1 style="color: rgb(255, 162, 178);">Daftar Cari Jodoh</h1>
     <form method="get">
         Nama Kamu
         <br>
@@ -192,7 +192,16 @@
             <option value="KAB TEBO">Kab. Tebo</option>
         </datalist>
         <br> <br>
+        Status
+        <br>
+        <select>
+            <option value="Pekerja">Pekerja</option>
+            <option value="Mahasiswa">Mahasiswa</option>
+            <option value="Siswa">Siswa</option>
+            <option value="Pengangguran">Pengangguran</option>
+        </select>
 
+        <br><br>
         Hobi
         <br>
         <input type="checkbox" id="Hobi"> Musik
